@@ -1,7 +1,6 @@
 plugins {
     id 'scala'
     id 'java'
-    id 'jacoco'
 }
 
 
@@ -66,17 +65,7 @@ dependencies {
     )
     //compile project(':layers')
 
-    testImplementation(
-            'org.scalatest:scalatest_2.11:3.0.0',
-            'org.junit.jupiter:junit-jupiter-api:5.1.0',
-            // https://mvnrepository.com/artifact/com.sun.jersey/jersey-client
-            'org.glassfish.jersey.core:jersey-client:2.5.1',
-            'com.fasterxml.jackson.core:jackson-core:2.9.7',
-            'org.mockito:mockito-all:1.10.19'
-    )
-    testRuntimeOnly(
-            'org.junit.jupiter:junit-jupiter-engine:5.1.0'
-    )
+
     integrationTestCompile(
             'org.scalatest:scalatest_2.11:3.0.0',
             'org.junit.jupiter:junit-jupiter-api:5.1.0',
@@ -88,71 +77,6 @@ dependencies {
     integrationTestRuntime(
             'org.junit.jupiter:junit-jupiter-engine:5.1.0'
     )
-}
-
-test {
-    useJUnitPlatform()
-
-    // explicitly include or exclude tests
-    include 'ski/crunch/**'
-
-
-    // show standard out and standard error of the test JVM(s) on the console
-    testLogging.showStandardStreams = true
-
-    // set heap size for the test JVM(s)
-    minHeapSize = "128m"
-    maxHeapSize = "512m"
-
-    // set JVM arguments for the test JVM(s)
-    jvmArgs '-XX:MaxPermSize=256m'
-
-    // listen to events in the test execution lifecycle
-    beforeTest { descriptor ->
-        logger.lifecycle("Running test:  $descriptor")
-    }
-
-    // Fail the 'test' task on the first test failure
-    failFast = true
-
-    // listen to standard out and standard error of the test JVM(s)
-    onOutput { descriptor, event ->
-        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message)
-    }
-
-    // workingDir = new File('src/test/')
-}
-
-
-jacoco {
-    toolVersion = "0.8.2"
-    reportsDir = file("$buildDir/coverage")
-
-}
-
-jacocoTestCoverageVerification {
-//    afterEvaluate {
-//        classDirectories = files(classDirectories.files.collect {
-//            fileTree(dir: it, exclude:  [
-//                    'com/garmin/fit/**',
-//                    'ski/crunch/activity/model/*'
-//            ])
-//        })
-//    }
-}
-jacocoTestReport {
-    reports {
-        xml.enabled = true
-        csv.enabled = false
-        html.destination file("${buildDir}/coverage/")
-    }
-
-
-    afterEvaluate {
-        classDirectories = files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: ['com/garmin/**', 'ski/crunch/activity/model/**'])
-        })
-    }
 }
 
 
@@ -196,7 +120,7 @@ task integrationTest(type: Test) {
 
 check.dependsOn integrationTest
 integrationTest.mustRunAfter test
-test.finalizedBy jacocoTestReport
+//test.finalizedBy jacocoTestReport
 
 /**
  * Builds the zip file for upload to AWS
